# pai-framework

./: .gitignore  FORMAT.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  SELF_FINETUNING.md  build_gemma_pai.py  demo.py  finetune_demo.py  hf_minicpm_card.md  hf_model_card.md  hf_omni_card.md  learn_demo.py  pack_demo.py  pack_gemma.py  pack_minicpm_o.py  pack_minicpm_o_full.py  pyproject.toml  run_gemma_test.py
docs/: architecture.mermaid
pai/: __init__.py  __main__.py  _jsonutil.py  actions.py  brain.py  core.py  finetune.py  learning.py  loader.py  local_brain.py  memory.py  omni_brain.py  paifile.py  policy.py  protocol.py  selfft.py  server_brain.py  triggers.py
